# cloud-radar

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  codecov.yml  mypy.ini  noxfile.py  pyproject.toml  renovate.json
.devcontainer/: Dockerfile  devcontainer.json  extra_pythons.sh
.github/: dependabot.yml
.github/workflows/: coverage.yml  pr_checks.yml  release.yml  test.yml
.scripts/: bump.py  requirements.txt
examples/unit/conditions/: README.md  test_conditions.py
examples/unit/functions/ForEach/: test_foreach.py
examples/unit/functions/ForEach/templates/: passing_non_alpha_transformed.yaml  replicate_multiple_transformed.yaml
examples/unit/hooks/: README.md  naming_resources_no_encryption_resource_suppression.yaml  naming_resources_no_encryption_template_suppression.yaml  test_hooks_resources.py
examples/unit/hooks/resources/: naming_resources.yaml  naming_resources_no_encryption_resource_suppression_diff_rule.yaml  naming_resources_no_encryption_template_suppression_diff_rule.yaml  test_hooks_resources.py
examples/unit/hooks/stack/: stack_naming_resources.yaml  test_hooks_stack.py
examples/unit/hooks/template/: naming_resources.yaml  naming_resources_failure.yaml  test_hooks_template.py
examples/unit/naming/: README.md  naming_resources.yaml  test_naming_advanced.py  test_naming_simple.py
examples/unit/parameters/: README.md  invalid_params_length.json  invalid_password_parameters_regex.json  test_parameters.py  valid_params.json
examples/unit/parameters/ssm/: SSM_Parameter_example.yaml  test_ssm_parameters.py
src/cloud_radar/: __init__.py  context.py  manager.py
src/cloud_radar/cf/e2e/: __init__.py  _stack.py
src/cloud_radar/cf/unit/: __init__.py  _condition.py  _functions_foreach.py  _hooks.py  _output.py  _parameter.py  _resource.py  _stack.py  _template.py  functions.py  test__template.py
src/cloud_radar/unit_test/: __init__.py  template.py
tests/: conftest.py  test_context.py  test_manger.py
tests/functional/: test_e2e.py  test_template.py
tests/templates/: IAM_Users_Groups_and_Policies.yaml  SQSStandardQueue.json  test_functions_split_in_if.yaml  test_imagebuilder_image_ref.yaml  test_length.yaml  test_maps.yml  test_media_getatt.yaml  test_params_commadelimited.yaml  test_params_list.yaml  test_stackid.yaml  test_sub_default_number.yaml
tests/templates/ForEach/conditions/: replicate_single_condition.yaml  replicate_single_condition_transformed.yaml
tests/templates/ForEach/outputs/: reference_replicated_buckets.yaml  reference_replicated_buckets_transformed.yaml  reference_replicated_ec2.yaml  reference_replicated_ec2_transformed.yaml
tests/templates/ForEach/resources/: passing_non_alpha.yaml  reference_replicated_properties.yaml  reference_replicated_properties_transformed.yaml  replicate_dynamodb.yaml  replicate_dynamodb_transformed.yaml  replicate_multiple.yaml  replicate_multiple_nested.yaml  replicate_multiple_nested_transformed.yaml  replicate_properties.yaml  replicate_properties_transformed.yaml  replicate_sns.yaml  replicate_sns_transformed.yaml
tests/templates/log_bucket/: .taskcat.yml  log_bucket.yaml
tests/test_cf/test_e2e/: test_stack.py
tests/test_cf/test_examples/: test_functional.py  test_unit.py
tests/test_cf/test_examples/unit/conditions_example/: test_conditions.py
tests/test_cf/test_examples/unit/iam_example/: test_parameters.py
tests/test_cf/test_examples/unit/naming_example/: test_naming.py
tests/test_cf/test_examples/unit/parameters_example/: test_parameters.py
tests/test_cf/test_examples/unit/sqs_example/: test_conditions.py
tests/test_cf/test_unit/: test_condition.py  test_functions.py  test_functions_commadelimitedlist.py  test_functions_foreach.py  test_functions_get_att.py  test_functions_length.py  test_functions_list.py  test_functions_nesting.py  test_functions_ref.py  test_functions_sub.py  test_functions_tojsonstring.py  test_hooks.py  test_output.py  test_parameter.py  test_resource.py  test_stack.py  test_stack_stackid.py  test_template.py
tests/unit/: test_template.py
