[project]
name = "cloud-radar"
version = "0.0.0"
description = "Run functional tests on cloudformation stacks."
readme = "README.md"
authors = [
    { name = "Levi Blaney", email = "shadycuz+dev@gmail.com" },
    { name = "David Hutchison", email = "david@devwithimagination.com" }
]
license = "Apache-2.0"
keywords = ["aws", "cloudformation", "cloud-radar", "testing", "taskcat", "cloud", "radar"]
requires-python = ">=3.9,<4.0"
dynamic = [ "classifiers" ]
dependencies = [
  "taskcat >=0.9.41, <1.0.0",
  "cfn-flip >=1.3.0, <2.0.0",
  "botocore >=1.35.36, <2.0.0",
]
[project.urls]
Repository = "https://github.com/DontShaveTheYak/cloud-radar"
Issues = "https://github.com/DontShaveTheYak/cloud-radar/issues"
Changelog = "https://github.com/DontShaveTheYak/cloud-radar/releases"


[tool.poetry]
requires-poetry = ">=2.0"
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Testing"
]



[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
coverage = {extras = ["toml"], version = "^7.0.0"}
pytest-cov = "^6.0.0"
pytest-mock = "^3.6.1"
isort = "^6.0.0"
black = "^25.0.0"
flake8 = "^7.0.0"
flake8-black = "^0.3.0"
flake8-isort = "^6.1.0"
flake8-bugbear = "^24.0.0"
mypy = "^1.0.0"
types-requests = "^2.28.11"
types-PyYAML = "^6.0.12"
cfn-lint = "1.28.0"
setuptools = {version = "75.8.2", python = ">=3.12"}

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["cloud_radar"]

[tool.coverage.report]
show_missing = true
fail_under = 95

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
